eetRL.output
   0  $accept : line_list $end

   1  line_list : line
   2            | line_list line

   3  line : dimension_expression_ref END
   4       | dimension_expression END

   5  dimension_expression_ref : dimension_expression REF refs

   6  refs : ref
   7       | refs LIST ref

   8  ref : arg SET REF_S ALPH SET numalph REF_E
   9      | arg SET REF_S arg SET numalph REF_E
  10      | arg SET REF_S ALPH SET arg REF_E
  11      | arg SET REF_S arg SET arg REF_E
  12      | arg SET REF_S LABEL SET NUM REF_E

  13  dimension_expression : list
  14                       | list RULE list
  15                       | label list
  16                       | label list RULE list

  17  label : LABEL NUM sps

  18  sps : SP
  19      | sps SP

  20  list : arg
  21       | FUNC_S FUNC_E
  22       | list LIST list
  23       | list FUNC_S list FUNC_E
  24       | list list

  25  arg : ARGEX
  26      | ARGEX DIM

  27  numalph : NUM
  28          | ALPH
  29          | numalph numalph

state 0
	$accept : . line_list $end  (0)

	ARGEX  shift 1
	FUNC_S  shift 2
	LABEL  shift 3
	.  error

	line_list  goto 4
	line  goto 5
	dimension_expression_ref  goto 6
	dimension_expression  goto 7
	arg  goto 8
	list  goto 9
	label  goto 10


state 1
	arg : ARGEX .  (25)
	arg : ARGEX . DIM  (26)

	DIM  shift 11
	ARGEX  reduce 25
	FUNC_S  reduce 25
	FUNC_E  reduce 25
	RULE  reduce 25
	LIST  reduce 25
	REF  reduce 25
	REF_E  reduce 25
	SET  reduce 25
	END  reduce 25


state 2
	list : FUNC_S . FUNC_E  (21)

	FUNC_E  shift 12
	.  error


state 3
	label : LABEL . NUM sps  (17)

	NUM  shift 13
	.  error


state 4
	$accept : line_list . $end  (0)
	line_list : line_list . line  (2)

	$end  accept
	ARGEX  shift 1
	FUNC_S  shift 2
	LABEL  shift 3
	.  error

	line  goto 14
	dimension_expression_ref  goto 6
	dimension_expression  goto 7
	arg  goto 8
	list  goto 9
	label  goto 10


state 5
	line_list : line .  (1)

	.  reduce 1


state 6
	line : dimension_expression_ref . END  (3)

	END  shift 15
	.  error


state 7
	line : dimension_expression . END  (4)
	dimension_expression_ref : dimension_expression . REF refs  (5)

	REF  shift 16
	END  shift 17
	.  error


state 8
	list : arg .  (20)

	.  reduce 20


state 9
	dimension_expression : list .  (13)
	dimension_expression : list . RULE list  (14)
	list : list . LIST list  (22)
	list : list . FUNC_S list FUNC_E  (23)
	list : list . list  (24)

	ARGEX  shift 1
	FUNC_S  shift 18
	RULE  shift 19
	LIST  shift 20
	REF  reduce 13
	END  reduce 13

	arg  goto 8
	list  goto 21


state 10
	dimension_expression : label . list  (15)
	dimension_expression : label . list RULE list  (16)

	ARGEX  shift 1
	FUNC_S  shift 2
	.  error

	arg  goto 8
	list  goto 22


state 11
	arg : ARGEX DIM .  (26)

	.  reduce 26


state 12
	list : FUNC_S FUNC_E .  (21)

	.  reduce 21


state 13
	label : LABEL NUM . sps  (17)

	SP  shift 23
	.  error

	sps  goto 24


state 14
	line_list : line_list line .  (2)

	.  reduce 2


state 15
	line : dimension_expression_ref END .  (3)

	.  reduce 3


state 16
	dimension_expression_ref : dimension_expression REF . refs  (5)

	ARGEX  shift 1
	.  error

	refs  goto 25
	ref  goto 26
	arg  goto 27


state 17
	line : dimension_expression END .  (4)

	.  reduce 4


state 18
	list : FUNC_S . FUNC_E  (21)
	list : list FUNC_S . list FUNC_E  (23)

	ARGEX  shift 1
	FUNC_S  shift 2
	FUNC_E  shift 12
	.  error

	arg  goto 8
	list  goto 28


state 19
	dimension_expression : list RULE . list  (14)

	ARGEX  shift 1
	FUNC_S  shift 2
	.  error

	arg  goto 8
	list  goto 29


state 20
	list : list LIST . list  (22)

	ARGEX  shift 1
	FUNC_S  shift 2
	.  error

	arg  goto 8
	list  goto 30


21: shift/reduce conflict (shift 1, reduce 24) on ARGEX
21: shift/reduce conflict (shift 18, reduce 24) on FUNC_S
21: shift/reduce conflict (shift 20, reduce 24) on LIST
state 21
	list : list . LIST list  (22)
	list : list . FUNC_S list FUNC_E  (23)
	list : list . list  (24)
	list : list list .  (24)

	ARGEX  shift 1
	FUNC_S  shift 18
	LIST  shift 20
	FUNC_E  reduce 24
	RULE  reduce 24
	REF  reduce 24
	END  reduce 24

	arg  goto 8
	list  goto 21


state 22
	dimension_expression : label list .  (15)
	dimension_expression : label list . RULE list  (16)
	list : list . LIST list  (22)
	list : list . FUNC_S list FUNC_E  (23)
	list : list . list  (24)

	ARGEX  shift 1
	FUNC_S  shift 18
	RULE  shift 31
	LIST  shift 20
	REF  reduce 15
	END  reduce 15

	arg  goto 8
	list  goto 21


state 23
	sps : SP .  (18)

	.  reduce 18


state 24
	label : LABEL NUM sps .  (17)
	sps : sps . SP  (19)

	SP  shift 32
	ARGEX  reduce 17
	FUNC_S  reduce 17


state 25
	dimension_expression_ref : dimension_expression REF refs .  (5)
	refs : refs . LIST ref  (7)

	LIST  shift 33
	END  reduce 5


state 26
	refs : ref .  (6)

	.  reduce 6


state 27
	ref : arg . SET REF_S ALPH SET numalph REF_E  (8)
	ref : arg . SET REF_S arg SET numalph REF_E  (9)
	ref : arg . SET REF_S ALPH SET arg REF_E  (10)
	ref : arg . SET REF_S arg SET arg REF_E  (11)
	ref : arg . SET REF_S LABEL SET NUM REF_E  (12)

	SET  shift 34
	.  error


state 28
	list : list . LIST list  (22)
	list : list . FUNC_S list FUNC_E  (23)
	list : list FUNC_S list . FUNC_E  (23)
	list : list . list  (24)

	ARGEX  shift 1
	FUNC_S  shift 18
	FUNC_E  shift 35
	LIST  shift 20
	.  error

	arg  goto 8
	list  goto 21


state 29
	dimension_expression : list RULE list .  (14)
	list : list . LIST list  (22)
	list : list . FUNC_S list FUNC_E  (23)
	list : list . list  (24)

	ARGEX  shift 1
	FUNC_S  shift 18
	LIST  shift 20
	REF  reduce 14
	END  reduce 14

	arg  goto 8
	list  goto 21


30: shift/reduce conflict (shift 1, reduce 22) on ARGEX
30: shift/reduce conflict (shift 18, reduce 22) on FUNC_S
30: shift/reduce conflict (shift 20, reduce 22) on LIST
state 30
	list : list . LIST list  (22)
	list : list LIST list .  (22)
	list : list . FUNC_S list FUNC_E  (23)
	list : list . list  (24)

	ARGEX  shift 1
	FUNC_S  shift 18
	LIST  shift 20
	FUNC_E  reduce 22
	RULE  reduce 22
	REF  reduce 22
	END  reduce 22

	arg  goto 8
	list  goto 21


state 31
	dimension_expression : label list RULE . list  (16)

	ARGEX  shift 1
	FUNC_S  shift 2
	.  error

	arg  goto 8
	list  goto 36


state 32
	sps : sps SP .  (19)

	.  reduce 19


state 33
	refs : refs LIST . ref  (7)

	ARGEX  shift 1
	.  error

	ref  goto 37
	arg  goto 27


state 34
	ref : arg SET . REF_S ALPH SET numalph REF_E  (8)
	ref : arg SET . REF_S arg SET numalph REF_E  (9)
	ref : arg SET . REF_S ALPH SET arg REF_E  (10)
	ref : arg SET . REF_S arg SET arg REF_E  (11)
	ref : arg SET . REF_S LABEL SET NUM REF_E  (12)

	REF_S  shift 38
	.  error


state 35
	list : list FUNC_S list FUNC_E .  (23)

	.  reduce 23


state 36
	dimension_expression : label list RULE list .  (16)
	list : list . LIST list  (22)
	list : list . FUNC_S list FUNC_E  (23)
	list : list . list  (24)

	ARGEX  shift 1
	FUNC_S  shift 18
	LIST  shift 20
	REF  reduce 16
	END  reduce 16

	arg  goto 8
	list  goto 21


state 37
	refs : refs LIST ref .  (7)

	.  reduce 7


state 38
	ref : arg SET REF_S . ALPH SET numalph REF_E  (8)
	ref : arg SET REF_S . arg SET numalph REF_E  (9)
	ref : arg SET REF_S . ALPH SET arg REF_E  (10)
	ref : arg SET REF_S . arg SET arg REF_E  (11)
	ref : arg SET REF_S . LABEL SET NUM REF_E  (12)

	ARGEX  shift 1
	ALPH  shift 39
	LABEL  shift 40
	.  error

	arg  goto 41


state 39
	ref : arg SET REF_S ALPH . SET numalph REF_E  (8)
	ref : arg SET REF_S ALPH . SET arg REF_E  (10)

	SET  shift 42
	.  error


state 40
	ref : arg SET REF_S LABEL . SET NUM REF_E  (12)

	SET  shift 43
	.  error


state 41
	ref : arg SET REF_S arg . SET numalph REF_E  (9)
	ref : arg SET REF_S arg . SET arg REF_E  (11)

	SET  shift 44
	.  error


state 42
	ref : arg SET REF_S ALPH SET . numalph REF_E  (8)
	ref : arg SET REF_S ALPH SET . arg REF_E  (10)

	ARGEX  shift 1
	ALPH  shift 45
	NUM  shift 46
	.  error

	arg  goto 47
	numalph  goto 48


state 43
	ref : arg SET REF_S LABEL SET . NUM REF_E  (12)

	NUM  shift 49
	.  error


state 44
	ref : arg SET REF_S arg SET . numalph REF_E  (9)
	ref : arg SET REF_S arg SET . arg REF_E  (11)

	ARGEX  shift 1
	ALPH  shift 45
	NUM  shift 46
	.  error

	arg  goto 50
	numalph  goto 51


state 45
	numalph : ALPH .  (28)

	.  reduce 28


state 46
	numalph : NUM .  (27)

	.  reduce 27


state 47
	ref : arg SET REF_S ALPH SET arg . REF_E  (10)

	REF_E  shift 52
	.  error


state 48
	ref : arg SET REF_S ALPH SET numalph . REF_E  (8)
	numalph : numalph . numalph  (29)

	ALPH  shift 45
	NUM  shift 46
	REF_E  shift 53
	.  error

	numalph  goto 54


state 49
	ref : arg SET REF_S LABEL SET NUM . REF_E  (12)

	REF_E  shift 55
	.  error


state 50
	ref : arg SET REF_S arg SET arg . REF_E  (11)

	REF_E  shift 56
	.  error


state 51
	ref : arg SET REF_S arg SET numalph . REF_E  (9)
	numalph : numalph . numalph  (29)

	ALPH  shift 45
	NUM  shift 46
	REF_E  shift 57
	.  error

	numalph  goto 54


state 52
	ref : arg SET REF_S ALPH SET arg REF_E .  (10)

	.  reduce 10


state 53
	ref : arg SET REF_S ALPH SET numalph REF_E .  (8)

	.  reduce 8


54: shift/reduce conflict (shift 45, reduce 29) on ALPH
54: shift/reduce conflict (shift 46, reduce 29) on NUM
state 54
	numalph : numalph . numalph  (29)
	numalph : numalph numalph .  (29)

	ALPH  shift 45
	NUM  shift 46
	REF_E  reduce 29

	numalph  goto 54


state 55
	ref : arg SET REF_S LABEL SET NUM REF_E .  (12)

	.  reduce 12


state 56
	ref : arg SET REF_S arg SET arg REF_E .  (11)

	.  reduce 11


state 57
	ref : arg SET REF_S arg SET numalph REF_E .  (9)

	.  reduce 9


State 21 contains 3 shift/reduce conflicts.
State 30 contains 3 shift/reduce conflicts.
State 54 contains 2 shift/reduce conflicts.


18 terminals, 12 nonterminals
30 grammar rules, 58 states
